Horizonriver QA20-Mar-2017/src/objects/Sub_Case__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Sub_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRT_Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HRT_CP_IMEI__c</fullName>
        <label>CP IMEI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_CP_MAC__c</fullName>
        <label>CP MAC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Carrier__c</fullName>
        <label>Carrier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Case_Number__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRT_Circuit_10__c</fullName>
        <label>Circuit 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Circuit_Speed__c</fullName>
        <label>Circuit Speed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Circuit_Type__c</fullName>
        <label>Circuit Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Cutover_Date__c</fullName>
        <label>Cutover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRT_Cutover_process_completion_date__c</fullName>
        <label>Cutover Process Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRT_HW_MAC__c</fullName>
        <label>HW MAC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_HW_Name__c</fullName>
        <label>HW Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_HW_Serial__c</fullName>
        <label>HW Serial #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRT_Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRT_Is_Task_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Task Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HRT_Modem_Validation_Date__c</fullName>
        <label>Modem Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRT_Notification_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Send?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HRT_P4_Install_Date__c</fullName>
        <label>P4 Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRT_Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HRT_Site_Survey__c</fullName>
        <label>Site Survey</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Telecom Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Staging Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Field Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Implementation Team I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Implementation Team II</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HRT_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HRT_Support_Pin__c</fullName>
        <label>Support Pin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRT_Task_State__c</fullName>
        <label>Task State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRT_VZ_CARD__c</fullName>
        <label>VZ CARD #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sub Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Field_Team_Sub_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Field Team</label>
        <queue>Field_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Implementation_Team_II_Sub_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Implementation Team II</label>
        <queue>Implementation_Team_II</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Implementation_Team_I_Sub_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Implementation Team I</label>
        <queue>Implementation_Team_I</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Staging_Team_Sub_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Staging Team</label>
        <queue>Staging_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Telecom_Team_Sub_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Telecom Team</label>
        <queue>Telecom_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Sub Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Tasks</pluralLabel>
    <recordTypes>
        <fullName>Task_1_Order_Circuit</fullName>
        <active>true</active>
        <label>Task 1 - Order Circuit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Task_2_Staging_Team</fullName>
        <active>true</active>
        <label>Task 2 - Staging Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>Task_3_CS_Tech_Integration_Sub</fullName>
        <active>true</active>
        <label>Task 3 - CS Tech Integration Sub</label>
    </recordTypes>
    <recordTypes>
        <fullName>Task_4_CS_Tech</fullName>
        <active>true</active>
        <label>Task 4 - CS Tech</label>
    </recordTypes>
    <recordTypes>
        <fullName>Task_5_Review_Survey_Results</fullName>
        <active>true</active>
        <label>Task 5 - Review Survey Results</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Completed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(HRT_Is_Task_Completed__c ,  ISCHANGED(HRT_Status__c )  )</errorConditionFormula>
        <errorDisplayField>HRT_Status__c</errorDisplayField>
        <errorMessage>You can&apos;t able to change the status , once completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_1_Telecom_Team</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(HRT_Stage__c, &apos;1 - Telecom Team&apos;), 
ISPICKVAL( HRT_Status__c , &apos;Completed&apos;) , 
OR( 
ISBLANK(HRT_Circuit_10__c), 
ISBLANK(HRT_Carrier__c), 
ISBLANK(HRT_Circuit_Speed__c), 
ISBLANK(HRT_Circuit_Type__c), 
ISBLANK(HRT_Support_Pin__c) , 
ISNULL(HRT_Install_Date__c) , 
ISNULL(HRT_Modem_Validation_Date__c) 
) 
)</errorConditionFormula>
        <errorMessage>Following fields valus are required: Circuit 10, 
Carrier, 
Circuit Speed, 
Circuit Type, 
Install Date, 
Support Pin, 
Modem Validation Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_2_Staging_Team</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(HRT_Stage__c, &apos;2 - Staging Team&apos;), 
ISPICKVAL( HRT_Status__c , &apos;Completed&apos;) , 
OR( 
ISBLANK(HRT_HW_Serial__c), 
ISBLANK(HRT_HW_Name__c), 
ISBLANK(HRT_CP_MAC__c), 
ISBLANK(HRT_CP_IMEI__c), 
ISBLANK(HRT_VZ_CARD__c) , 
ISBLANK(HRT_HW_MAC__c) 
) 
)</errorConditionFormula>
        <errorMessage>Following fields valus are required: HW Serial #, 
HW Name, 
CP MAC, 
CP IMEI, 
VZ CARD #, 
HW MAC</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_3_Field_Team</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(HRT_Stage__c, &apos;3 - Field Team&apos;), 
ISPICKVAL( HRT_Status__c , &apos;Completed&apos;) , 
ISNULL(HRT_P4_Install_Date__c) 
)</errorConditionFormula>
        <errorDisplayField>HRT_P4_Install_Date__c</errorDisplayField>
        <errorMessage>P4 Install Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_4_CS_Tech_Sub</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(HRT_Stage__c, &apos;4 - Implementation Team I&apos;), 
ISPICKVAL( HRT_Status__c , &apos;Completed&apos;) , 
ISNULL(HRT_Cutover_Date__c) 
)</errorConditionFormula>
        <errorDisplayField>HRT_Cutover_Date__c</errorDisplayField>
        <errorMessage>Cutover Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_5_Implementation_Team_II</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(HRT_Stage__c, &apos;5 - Implementation Team II&apos;), 
ISPICKVAL( HRT_Status__c , &apos;Completed&apos;) , 
ISNULL(HRT_Cutover_process_completion_date__c) 
)</errorConditionFormula>
        <errorDisplayField>HRT_Cutover_process_completion_date__c</errorDisplayField>
        <errorMessage>Cutover Process Completion Date 
is required</errorMessage>
    </validationRules>
</CustomObject>